# Study

./: clang-format.txt  readme.txt  test.c  test.txt
cmake/demo1/: CMakeLists.txt
cmake/demo1/main/: CMakeLists.txt  main.cpp
cmake/demo1/sub/: sub.h
cmake/demo2/: CMakeLists.txt
cmake/demo2/add/: CMakeLists.txt
cmake/demo2/add/include/: add.h
cmake/demo2/main/: CMakeLists.txt  main.cpp
cmake/demo2/proto/: CMakeLists.txt  mydata.proto
cmake/demo2/sub/: CMakeLists.txt
cmake/demo3/: main.c
datastruct/: .clangformat  bublle  bublle.cpp
epoll/: server  server.c
program/: CMakeLists.txt
program/add/: add.c
program/sub/: sub.h
program/test/: add.h  main  main.c  sub.c
select/: .clang-format  client  server.c
select_multithread/: client.c  server
socket__c/: .clang-format  client.c  server  server.c
socket_multithread_c/: client  client.c  server  server.c  test  test.c
socket_threadpool_c/.cache/clangd/index/: main.c.65382D76D3CC9905.idx
socket_threadpool_c/client/: client  client.c
socket_threadpool_c/server/: .clang-format  CMakeLists.txt  server.c
socket_threadpool_c/server/include/: threadpool.h
socket_threadpool_c/server/src/: threadpool.c
threadpool_c/: CMakeLists.txt  main.c
threadpool_c/.cache/clangd/index/: threadpool.c.9BE1C6956AF00953.idx  threadpool.h.7D17AC49AB3178B4.idx
threadpool_c/include/: threadpool.h
threadpool_c/src/: threadpool.c
threadpool_cpp/: CMakeLists.txt  get.sh  main.cpp
threadpool_cpp/TaskQueue/: TaskQueue.cpp  TaskQueue.h
threadpool_cpp/ThreadPool/: ThreadPool.cpp  ThreadPool.h
